using spring ai

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=demo-agent
-gemini.api.key=
-gemini.embedding.url=
+spring.ai.vertex.ai.gemini.api-key=AIzaSyAfK60DAmjIbPBTt7Wrf-6qTCOYm2Z7ofk
