--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=demo-agent
-spring.ai.vertex.ai.gemini.api-key=AIzaSyAfK60DAmjIbPBTt7Wrf-6qTCOYm2Z7ofk
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.embedding.enable=true
+spring.ai.ollama.embedding.options.model=nomic-embed-text
+spring.ai.ollama.chat.options.model=llama3.2
+
+spring.ai.vectorstore.pgvector.initialize-schema=true
+spring.ai.vectorstore.pgvector.remove-existing-vector-store-table=true
+spring.ai.vectorstore.pgvector.index-type=HNSW
+spring.ai.vectorstore.pgvector.distance-type=COSINE_DISTANCE
+spring.ai.vectorstore.pgvector.dimension=1536
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=bhartkb
+spring.datasource.password=admin
